# touch-me

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/backend/: package.json  pyproject.toml
apps/backend/src/: main.py
apps/frontend/: astro.config.mjs  package.json
apps/frontend/src/components/: Dashboard.tsx
apps/frontend/src/pages/: index.astro
apps/frontend/src/styles/: global.css
